Bug: play and stop icons are not center aligned in dashboard projects(TG-213 #ready-for-test)

--- a/src/app/core/toolbar/toolbar.component.sass
+++ b/src/app/core/toolbar/toolbar.component.sass
@@ -73,9 +73,12 @@
   @media (max-width: $ps-mobile)
     height: 36px
     width: 36px
+    line-height: 2.2rem
 
 .ps-toolbar-stop
   padding-left: 2px
+  @media (max-width: $ps-mobile)
+    padding-left: 0
 
 .ps-toolbar-time-tooltip
   background-color: $primary-light
